--- a/style.css
+++ b/style.css
@@ -202,15 +202,6 @@ img {
     border-radius: 5px;
 }
 
-.video {
-    background-color: var(--cor05);
-    margin: 30px -30px 0px -30px;
-    padding: 20px;
-    padding-bottom: 69%;
-    position: relative;
-    box-shadow: -3px 3px 20px 3px rgba(0, 0, 0, 0.174);
-}
-
 .video > iframe {
     position: absolute;
     top: 5%;
@@ -219,51 +210,13 @@ img {
     height: 90%;
 }
 
-.instrucoes {
-    background-color: var(--cor01);
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.315);
-    padding: 10px;
-    border-radius: 10px;
-    margin-top: 30px;
-}
-
-.instrucoes > h3 {
-    text-indent: 5px;
-    color: white;
-    background-color: #6E2345;
-    padding: 10px;
-    margin: -10px -10px 0px -10px;
-    border-radius: 10px 10px 0px 0px;
-}
-
-.comoJogar {
-    width: 50px;
-    height: 50px;
-    display: inline-block;
-}
-
-.comoJogarMaior {
-    width: 65px;
-    height: 65px;
-}
-
-.conteinerInstrucoes {
-    display: flex;
-    padding-top: 10px;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-.conteinerInstrucoesImg {
-    flex-direction: row;
-    justify-content: space-evenly;
-    margin: auto;
-    width: 100%;
+.video {
+    background-color: var(--cor05);
+    margin: 30px -30px 0px -30px;
     padding: 20px;
-}
-
-.conteinerInsutrucoesParagrafo {
-    text-align: center;
+    padding-bottom: 69%;
+    position: relative;
+    box-shadow: -3px 3px 20px 3px rgba(0, 0, 0, 0.174);
 }
 
 /*-------------CARROUSEL-------------*/
@@ -339,33 +292,40 @@ img {
 
 /*-------------RODAPE-------------*/
 
-#rodape{
-    font-size: 0.8em;
-    text-align: center;
+footer {
     background-color: var(--cor04);
     color: white;
-    padding: 3px;
+    padding: 2px;
 }
 
-.projetoFinal {
-    color: white;
-}
-
-.linkRodape {
-    font-weight: bolder;
-    text-decoration: none;
-    color: white;
-}
-
-.linkRodape:hover {
-    text-decoration: underline;
-    background-color: white;
-    color: var(--cor04);
-    padding: 2px 6px;
-    border-radius: 10px;
-}
-
-.paragrafoFooter {
+.rodapeParagrafo {
     text-align: center;
-    margin: 3px;
+    font-size: 0.8em;
+    margin-bottom: 0px;
 }
+
+.linkFooter {
+    color: white;
+    text-decoration: none;
+    font-weight: bolder;
+}
+
+.linkFooter:hover {
+    color: var(--cor04);
+    background-color: white;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.linkJogo {
+    color: white;
+    text-decoration: none;
+    background-color: #6E2345;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+
+/*
+:visit
+*/
