--- a/STYLE/style.css
+++ b/STYLE/style.css
@@ -1,21 +1,12 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
-
-/*-------------CONFIGGLOBAIS-------------*/
-* {
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
-}
+/*-------------CONFIG GLOBAIS-------------*/
 
 :root {
     --fonte-titulo-principal: 'Pacifico', cursive;
     --fonte-sub-titulo: 'VT323', monospace;
     --fonte-padrao: Arial, Helvetica, sans-serif;
-    --cor01: #f8d7e59a;
+    --cor01: rgba(248, 215, 229, 0.604);
     --cor02: #BA7393;
     --cor03: #F04D96;
     --cor04: #6E2345;
@@ -27,78 +18,78 @@
 }
 
 body {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
     font-family: var(--fonte-padrao);
-    background-color: var(--cor01);
+}
+
+.papelParede {
+    background: var(--cor01) url(../IMAGE/papeldeparede.png);
+}
+
+h1 {
+    font: lighter 3em var(--fonte-titulo-principal);
+    text-shadow: 4px 4px 3px rgba(0, 0, 0, 0.363);
+    text-align: center;
+    color: white;
 }
 
 h2 {
     font-family: var(--fonte-sub-titulo);
+    font-weight: normal;
+    letter-spacing: 3px;
     color: white;
     background-image: linear-gradient(to right, var(--cor04), white);
     margin-bottom: 10px;
     padding: 5px 5px 5px 15px;
     border-radius: 30px;
-    letter-spacing: 3px;
-    font-weight: normal;
 }
 
 h3 {
-    text-indent: 5px;
-    color: white;
-    background-color: #6E2345;
     padding: 10px;
-    margin: -10px -10px 0px -10px;
-    border-radius: 10px 10px 0px 0px;
+    margin: -10px -10px 0 -10px;
+    border-radius: 10px 10px 0 0px;
 }
 
 p {
     line-height: 2em;
-    text-indent: 30px;
+    text-indent: 50px;
     text-align: justify;
-    margin-bottom: 20px;
+    margin: 20px;
 }
 
 /*-------------CABECALHO-------------*/
-#cabecalho {
-    text-align: center;
+header {
     padding: 10px 20px 10px 20px;
     min-height: 150px;
     background-image: linear-gradient(to top, var(--cor04), var(--cor03));
-    color: white;
 }
 
-.tituloCabecalho {
-    font-family: var(--fonte-titulo-principal);
-    font-size: 3em;
-    font-weight: lighter;
-    text-shadow: 4px 4px 3px rgba(0, 0, 0, 0.363);
-}
-
-.paragrafoCabecalho {
-    font-size: 1.6em;
-    font-family: var(--fonte-sub-titulo);
-    font-weight: lighter;
+.paragrafoCenter{
+    font: lighter 1.6em var(--fonte-sub-titulo);
     text-align: center;
+    color: white;
 }
 
 /*-------------NAVEGAÇÃO-------------*/
 
-#navegador {
+nav {
     background-color: var(--cor04);
-    padding: 0px 20px 20px 20px;
-    font-size: 0.9em;
-    box-shadow: 0px 6px 7px 0px rgba(0, 0, 0, 0.174);
+    padding: 0 20px 20px 20px;
+    box-shadow: 0 6px 7px 0 rgba(0, 0, 0, 0.174);
 }
 
 .linkNav {
+    font: normal bold 0.9em;
     color: white;
     text-decoration: none;
     margin-right: 20px;
     transition-duration: 0.5s;
-    font-weight: bold;
 }
 
 .linkNav:hover {
+    font-weight: bolder;
     background-color: white;
     color: var(--cor04);
     padding: 5px 15px;
@@ -110,71 +101,62 @@ p {
 
 main {
     background-color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.315);
     min-width: 300px;
     max-width: 1000px;
     margin: auto;
-    padding: 30px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.315);
-    border-radius: 0px 0px 20px 20px;
     margin-bottom: 30px;
+    padding: 30px;
+    border-radius: 0 0 20px 20px;
 }
 
-.citacao {
+blockquote {
     text-align: center;
     font-size: 0.9em;
     line-height: 1.3;
-    padding-bottom: 30px;
-    background-color: var(--cor01);
     border-radius: 20px;
-    margin: center;
-    padding: 20px;
+    margin: auto;
     margin-bottom: 30px;
+    width: 70%;
+    padding: 20px 20px 30px 20px;
+    border: 3px dashed var(--cor04);
+    background-color: var(--cor01);
     box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.315);
-}
-
-.aside {
-    margin-bottom: 20px;
-    padding-bottom: 10px;
-}
-
-.parafragoAside {
-    margin: 20px;
-}
-
-article {
-    padding-bottom: 30px
 }
 
 aside {
     background-color: var(--cor01);
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.315);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.315);
     padding: 10px;
     border-radius: 10px;
 }
 
-article > ul {
-    list-style-position: inside;
-    columns: 2;
-    list-style-type: '🕹️\00A0\00A0';
-    text-align: center;
-    padding-top: 10px;
+.h3Aside {
+    color: white;
+    background-color: var(--cor04);
 }
 
-#conteiner {
-    display: flex;
+article {
+    margin: 20px;
+}
+
+ul {
+    list-style-position: inside;
+    list-style-type: '🕹️\00A0\00A0';
+    columns: 2;
     padding-top: 10px;
+    text-align: center;
+}
+
+.conteinerJogosShaw {
+    display: flex;
 }
 
 .jogosShaw {
     flex-direction: row;
     justify-content: space-evenly;
     margin: auto;
-    width: 40%;
-    padding-bottom: 10px;
-}
-
-strong {
-    color: var(--cor04);
+    width: 48%;
 }
 
 img {
@@ -184,25 +166,20 @@ img {
     margin-bottom: 20px;
 }
 
-.imgJogos {
-    box-shadow: -3px 3px 20px 3px rgba(0, 0, 0, 0.174);
-}
-
-.externo {
+strong {
     color: var(--cor04);
-    text-decoration: none;
-    font-weight: bolder;
 }
 
-.externo:hover {
-    background-color: var(--cor04);
-    text-decoration: underline;
-    color: white;
-    padding: 5px 10px;
-    border-radius: 5px;
+.video {
+    position: relative;
+    background-color: var(--cor05);
+    box-shadow: -3px 3px 20px 3px rgba(0, 0, 0, 0.174);
+    margin: 0px -50px 30px -50px;
+    padding: 20px;
+    padding-bottom: 58%;
 }
 
-.video > iframe {
+iframe {
     position: absolute;
     top: 5%;
     left: 5%;
@@ -210,37 +187,52 @@ img {
     height: 90%;
 }
 
-.video {
-    background-color: var(--cor05);
-    margin: 30px -30px 0px -30px;
-    padding: 20px;
-    padding-bottom: 69%;
-    position: relative;
-    box-shadow: -3px 3px 20px 3px rgba(0, 0, 0, 0.174);
+a {
+    color: var(--cor04);
+    text-decoration: none;
+    font-weight: bolder;
+    text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.363);
+}
+
+a:hover {
+    background-color: var(--cor04);
+    color: white;
+    text-decoration: underline;
+    padding: 3px;
+    border-radius: 5px;
+    font-style: italic;
+}
+
+.fontePreta {
+    color: var(--cor04);
+}
+
+.h3Jogo {
+    color: var(--cor04);
+    text-align: center;
+    text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.363);
 }
 
 /*-------------CARROUSEL-------------*/
 
-.conteiner {
+.conteinerCarrousel {
     position: relative;
     padding: 20px;
     max-width: 640px;
     margin: 0 auto;
     border: 3px solid var(--cor04);
     border-radius: 5px;
-    margin: auto;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.466);
-}
-
-.carrousel::-webkit-scrollbar {
-    display: none;
 }
 
 .carrousel {
     overflow-x: auto;
     -ms-overflow-style: none; 
-    scrollbar-width: none;
   }
+
+.carrousel::-webkit-scrollbar {
+    display: none;
+}
 
 .galeria {
     display: flex;
@@ -257,13 +249,12 @@ img {
     font-size: 20px;
     line-height: 250px;
     width: 30px;
-    text-align: center;
-    color: #fff;
     cursor: pointer;
     border: none;
-    background: linear-gradient(to left, transparent 0%, var(--cor04));
     opacity: 0.3;
     transition: all 600ms ease-in-out;
+    color: #fff;
+    background: linear-gradient(to left, transparent 0%, var(--cor04));
 }
 
 .setaDireita {
@@ -294,38 +285,16 @@ img {
 
 footer {
     background-color: var(--cor04);
-    color: white;
-    padding: 2px;
-}
-
-.rodapeParagrafo {
-    text-align: center;
-    font-size: 0.8em;
-    margin-bottom: 0px;
-}
-
-.linkFooter {
-    color: white;
-    text-decoration: none;
-    font-weight: bolder;
-}
-
-.linkFooter:hover {
-    color: var(--cor04);
-    background-color: white;
     padding: 5px;
-    border-radius: 5px;
+    text-align: center;
+    color: white;
 }
 
 .linkJogo {
     color: white;
-    text-decoration: none;
-    background-color: #6E2345;
-    padding: 5px;
-    border-radius: 5px;
 }
 
-
-/*
-:visit
-*/
+.linkJogo:hover {
+    color: var(--cor04);
+    background-color: white;
+}
