--- a/STYLE/style.css
+++ b/STYLE/style.css
@@ -125,7 +125,7 @@ blockquote {
     margin: auto;
     margin-bottom: 30px;
     width: 70%;
-    padding: 20px 20px 30px 20px;
+    padding: 20px;
     border: 3px dashed var(--cor04);
     background-color: var(--cor01);
     box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.315);
@@ -290,7 +290,7 @@ a:hover {
 
 /*-------------RODAPE-------------*/
 
-footer {
+/* footer {
     background-color: var(--cor04);
     padding: 5px;
     text-align: center;
@@ -312,4 +312,37 @@ footer {
     display: inline;
     margin: 5px;
     text-align: right;
+} */
+
+
+footer {
+    display: flex;
+    gap: 1rem;
+    height: 0vh;
+    justify-content: center;
+    padding: 20px;
+    align-items: center;
+    background-color: var(--cor04);
+}
+
+footer > div {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    flex-wrap: wrap;
+}
+
+.textofooter, .strongFooter {
+    color: white;
+    margin: auto;
+}
+
+.divFooter {
+    height: 38px;
+    width: 38px;
+}
+
+.linkFooter {
+    display: block;
+    margin: auto;
 }
