--- a/STYLE/style.css
+++ b/STYLE/style.css
@@ -104,7 +104,7 @@ nav {
     text-decoration: underline;
 }
 
-/*-------------CONTEUDOPRINCIPAL-------------*/
+/*-------------CONTEUDO PRINCIPAL-------------*/
 
 main {
     background-color: white;
