--- a/CSS/style.css
+++ b/CSS/style.css
@@ -25,7 +25,7 @@
 
 body {
     font-family: var(--fonte-padrao);
-    background: var(--cor01) url(../IMAGE/papeldeparede.png);
+    background: var(--cor01);
 }
 
 
@@ -79,31 +79,6 @@ header {
     color: white;
 }
 
-/*-------------NAVEGAÇÃO-------------*/
-
-nav {
-    background-color: var(--cor04);
-    padding: 0 20px 20px 20px;
-    box-shadow: 0 6px 7px 0 rgba(0, 0, 0, 0.174);
-}
-
-.linkNav {
-    font: normal bold 0.9em;
-    color: white;
-    text-decoration: none;
-    margin-right: 20px;
-    transition-duration: 0.5s;
-}
-
-.linkNav:hover {
-    font-weight: bolder;
-    background-color: white;
-    color: var(--cor04);
-    padding: 5px 15px;
-    border-radius: 6px;
-    text-decoration: underline;
-}
-
 /*-------------CONTEUDO PRINCIPAL-------------*/
 
 main {
@@ -145,14 +120,6 @@ aside {
 
 article {
     margin: 20px;
-}
-
-ul {
-    list-style-position: inside;
-    list-style-type: '🕹️\00A0\00A0';
-    columns: 2;
-    padding-top: 10px;
-    text-align: center;
 }
 
 .conteinerJogosShaw {
