--- a/CSS/style.css
+++ b/CSS/style.css
@@ -259,32 +259,39 @@ a:hover {
 
 footer, footer > div {
     display: flex;
-    justify-content: center;
-    gap: 1rem;
+    justify-content: sp;
 }
 
 footer {
-    height: 0vh;
-    padding: 20px;
-    align-items: center;
+    font-size: 0.8em;
+    text-align: center;
     background-color: var(--cor04);
+    color: white;
+    justify-content: center;
 }
 
 footer > div {
     flex-wrap: wrap;
 }
 
-.textofooter, .strongFooter {
+.strongFooter {
     color: white;
     margin: auto;
+    margin: 0;
+    text-align: center;
 }
 
 .divFooter {
-    height: 38px;
-    width: 38px;
+    height: 60px;
+    width: 60px;
 }
 
 .linkFooter {
     display: block;
     margin: auto;
+    font-weight: 400;
+}
+
+.linkFooter:hover {
+    scale: 1.3;
 }
